@@ -18,6 +18,7 @@ version <next>:
 - RTSP tunneling over HTTP
 - RTP depacketization of SVQ3
 - -strict inofficial replaced by -strict unofficial
+- ffplay -exitonkeydown and -exitonmousedown options added
 
 
 version 0.6:
